syntax = "proto3";
package verana.trustregistry;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "verana/trustregistry/params.proto";
import "verana/trustregistry/types.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustregistry/types";

// Counter defines an entity type and its current counter value
message Counter {
  string entity_type = 1;
  uint64 value = 2;
}

// GenesisState defines the trustregistry module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  // Collection of all trust registries
  repeated TrustRegistry trust_registries = 2 [(gogoproto.nullable) = false];

  // Collection of all governance framework versions
  repeated GovernanceFrameworkVersion governance_framework_versions = 3 [(gogoproto.nullable) = false];

  // Collection of all governance framework documents
  repeated GovernanceFrameworkDocument governance_framework_documents = 4 [(gogoproto.nullable) = false];

  // List of counters by entity type (tr, gfv, gfd)
  repeated Counter counters = 5 [(gogoproto.nullable) = false];
}